Name:                crypton-asn1-parse
Version:             0.9.5
Description:         Simple monadic parser for ASN1 stream types, when ASN1 pattern matching is not convenient.
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          Mike Pilgrem <public@pilgrem.com>, Kazu Yamamoto <kazu@iij.ad.jp>
Synopsis:            Simple monadic parser for ASN1 stream types.
Build-Type:          Simple
Category:            Data
stability:           experimental
Cabal-Version:       >=1.6
Homepage:            https://github.com/mpilgrem/crypton-asn1
Extra-Doc-Files:     CHANGELOG.md, README.md

Library
  Build-Depends:     base >= 3 && < 5
                   , bytestring
                   , crypton-asn1-types >= 0.3 && < 0.4
                   , crypton-asn1-encoding >= 0.9
  Exposed-modules:   Data.ASN1.Parse
  ghc-options:       -Wall

source-repository head
  type:     git
  location: https://github.com/mpilgrem/crypton-asn1
  subdir:   parse
